# portfolio-page

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
portfolio_page/: __init__.py  core.py
tests/: test_portfolio_page.py
